[package]
name = "hello_rpi0"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
description = "Read BME280 data"
repository = "https://github.com/Krumbthi/hello_rpi0.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"
log = "0.4"
env_logger = "0.9"
shared_memory = "0.12"
raw_sync = "0.1"
bytes = "1.1"

[profile.release]
opt-level = "z"  # Optimize for size.